# sswg

./: .gitignore  Index.txt  LICENSE  README.md  _upload_to_pypi.txt  build_website.bat  howto.txt  index.html  index.sswg  index.txt  pyproject.toml  setup.py  sswg.css  sswg.py  sswg.txt  test.html  upload_to_pypi.txt  ursina.txt  website_generator.py
sswg/: index.html  sswg.py
